<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.MainActivity">

    <ImageView
        android:id="@+id/bg_search"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:src="@drawable/ic_search_24"
        android:visibility="gone"
        android:outlineAmbientShadowColor="#ff9e80"
        android:outlineSpotShadowColor="#ff9e80"
        android:contentDescription="@string/check_internet" />

    <TextView
        style="@style/Theme.FinalProjectGitAppSalim.text"
        android:id="@+id/bg_txtsearch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/input_github_username"
        android:layout_below="@id/bg_search"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:visibility="gone"/>
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_user"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:listitem="@layout/item_row_favorite"
        android:layout_marginTop="80dp"/>

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:indeterminateTint="@color/design_default_color_primary_dark"
        android:visibility="gone"/>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp">
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/query"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="text"
                android:hint="@string/search_username" />
        </com.google.android.material.textfield.TextInputLayout>
        <ImageView
            android:id="@+id/search"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="right"
            android:layout_margin="10dp"
            android:src="@drawable/ic_search_24"
            android:contentDescription="@string/search"
            tools:ignore="RtlHardcoded" />
    </FrameLayout>

</RelativeLayout>