<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.DetailActivty">
    <ImageView
        android:id="@+id/img_bg"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="@drawable/backg"
        android:contentDescription="@string/background" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="350dp"
            android:layout_height="180dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="90dp"
            android:src="@drawable/bg_profil_white"
            android:contentDescription="@string/profile" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/img"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            app:civ_border_width="5dp"
            app:civ_border_color="@color/white"
            android:src="@drawable/ic_account_circle" />

        <TextView
            style="@style/Theme.FinalProjectGitAppSalim.text"
            android:id="@+id/tv_nama"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nama"
            android:layout_gravity="center_horizontal"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginTop="130dp"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="160dp">
            <TextView
                style="@style/Theme.FinalProjectGitAppSalim.text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/username"
                android:textSize="13sp"
                android:textStyle="bold"/>
            <TextView
                style="@style/Theme.FinalProjectGitAppSalim.text"
                android:id="@+id/tv_username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/username"
                android:textSize="13sp"
                android:textStyle="bold"
                android:layout_marginStart="5dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="180dp"
            tools:ignore="UseCompoundDrawables">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_location"
                android:theme="@style/Theme.FinalProjectGitAppSalim.item"
                android:contentDescription="@string/location" />
            <TextView
                style="@style/Theme.FinalProjectGitAppSalim.text"
                android:id="@+id/tv_location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/location"
                android:textSize="13sp"
                android:textStyle="bold"
                android:layout_marginStart="5dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="220dp"
            android:layout_gravity="center_horizontal">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center_horizontal"
                android:layout_marginEnd="20dp">
                <TextView
                    style="@style/Theme.FinalProjectGitAppSalim.text"
                    android:id="@+id/tv_repos"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:text="@string/angka"/>
                <TextView
                    style="@style/Theme.FinalProjectGitAppSalim.text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:text="@string/repositories"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center_horizontal"
                android:layout_marginStart="10dp">
                <TextView
                    style="@style/Theme.FinalProjectGitAppSalim.text"
                    android:id="@+id/tv_follwers"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:text="@string/angka"/>
                <TextView
                    style="@style/Theme.FinalProjectGitAppSalim.text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:text="@string/followers"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center_horizontal"
                android:layout_marginStart="30dp">
                <TextView
                    style="@style/Theme.FinalProjectGitAppSalim.text"
                    android:id="@+id/tv_follwing"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:text="@string/angka"/>
                <TextView
                    style="@style/Theme.FinalProjectGitAppSalim.text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:text="@string/following"/>
            </LinearLayout>
        </LinearLayout>
    </FrameLayout>
    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:indeterminateTint="#ff9e80"
        android:visibility="gone"/>
    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="280dp"/>

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/view_pager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="310dp" />

    <ToggleButton
        android:id="@+id/btn_favorite"
        android:layout_width="24dp"
        android:layout_height="21dp"
        android:layout_margin="16dp"
        android:foregroundGravity="bottom"
        app:fabSize="normal"
        app:layout_anchorGravity="bottom|end"
        android:background="@drawable/favorite"
        android:textOff=""
        android:textOn=""
        android:layout_alignParentRight="true"/>

</RelativeLayout>